squashing bugs (9)

--- a/experiments/emergence/style.css
+++ b/experiments/emergence/style.css
@@ -384,17 +384,17 @@ body.info-open .icon-info{
 
 .info-scroll h1{
   font-size: 3.5rem;
-  line-height: 0.95;
-  letter-spacing: 1.5px;
-  font-weight: inherit;
+  font-weight: 500;
+  line-height: 110%; /* 61.6px */
+  letter-spacing: -1.12px;
   margin: 0 0 32px 0;
 }
 
 .info-scroll p{
   font-size: 1.75rem;
-  font-weight: 300;
-  line-height: 1.1;
-  letter-spacing: 1.5px;
+  font-weight: 400;
+  line-height: 115%; /* 32.2px */
+  letter-spacing: -0.28px;
   margin: 0 0 20px 0;
 }
 
